--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="description"
-      content="Portafolio de @Chiki, que muestra sus logros y habilidades profesionales." />
+      name="description"Portafolio de @Chiki, que muestra sus logros y habilidades profesionales.
+      content="" />
     <meta name="keywords" content="portafolio, ingenieria, sistemas" />
     <meta name="author" content="@Chiki" />
 
