feat: Enhance project and personal pages with improved descriptions, icons, and animations
- Updated project descriptions for clarity and professionalism in Proyectos.tsx.
- Replaced Font Awesome icons with Lucide icons for better visual consistency.
- Improved layout and styling of project cards with new hover effects and animations.
- Enhanced the SobreMi.tsx page with updated soft skills and education sections, incorporating icons and improved layout.
- Added new animations for modal and button entries in dialog-style.css.
- Refactored global styles for better scrollbar support and accessibility features.
- Removed unused CSS files for a cleaner codebase.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,39 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"Portafolio de @Chiki, que muestra sus logros y habilidades profesionales.
-      content="" />
-    <meta name="keywords" content="portafolio, ingenieria, sistemas" />
-    <meta name="author" content="@Chiki" />
 
-    <link rel="stylesheet" href="/src/style/global.css" />
+    <title>Portafolio | Chiki - Ingeniería de Sistemas</title>
+
+    <meta
+      name="description"
+      content="Portafolio de Carlos Alzamora (@Chiki). Estudiante de Ingeniería de Sistemas y Desarrollador Frontend. Proyectos en React, TypeScript y TailwindCSS." />
+
+    <meta
+      name="keywords"
+      content="Carlos Alzamora, Chiki, portafolio web, desarrollo frontend, ingeniería de sistemas, React, TypeScript, programador junior, CV online" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="author" content="Carlos Alzamora - Chiki" />
+
+    <link rel="canonical" href="https://portafolio-chiki.vercel.app/" />
+
+    <meta
+      property="og:title"
+      content="Portafolio | Chiki" />
+    <meta
+      property="og:description"
+      content="Portafolio de Carlos Alzamora. Proyectos de desarrollo web y habilidades técnicas." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portafolio-chiki.vercel.app/" />
+    <meta property="og:locale" content="es_ES" />
+    <meta name="theme-color" content="#020617" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="stylesheet" href="/src/style/global.css" />
 
     <script
       src="https://kit.fontawesome.com/e424d20747.js"
       crossorigin="anonymous"></script>
-
-    <title>Portafolio</title>
   </head>
   <body>
     <div id="root"></div>
